baml_language/crates/baml_tests/snapshots/generator/baml_tests__generator__03_hir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.MyClass {
  name: string
  age: int
}
function user.GetUser() -> user.MyClass  [llm] {
  baml.llm.call_llm_function(null, "GetUser", map {  })
}
function user.GetUser$build_request() -> baml.http.Request  [expr] {
  baml.llm.build_request("GetUser", map {  })
}
function user.GetUser$render_prompt() -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("GetUser", map {  })
}
