baml_language/crates/baml_tests/snapshots/generator/baml_tests__generator__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.GetUser() -> user.MyClass {
    // Locals:
    let _0: user.MyClass // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.call_llm_function(const null, const "GetUser", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.GetUser$build_request() -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.build_request(const "GetUser", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.GetUser$render_prompt() -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.render_prompt(const "GetUser", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
