baml_language/crates/baml_tests/snapshots/generator/baml_tests__generator__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.MyClass {
  name: string
  age: int
}
function user.GetUser() -> user.MyClass throws unknown {
  baml.llm.call_llm_function<T>(null, "GetUser", map {  }) : user.MyClass
  !! 347..397: type mismatch: expected baml.llm.Client, got null
}
function user.GetUser$render_prompt() -> baml.llm.PromptAst throws unknown {
  baml.llm.render_prompt(null, "GetUser", map {  }) : baml.llm.PromptAst
  !! 316..397: type mismatch: expected baml.llm.Client, got null
}
function user.GetUser$build_request() -> baml.http.Request throws unknown {
  baml.llm.build_request(null, "GetUser", map {  }) : baml.http.Request
  !! 316..397: type mismatch: expected baml.llm.Client, got null
}
function user.GetUser$parse(json: string) -> user.MyClass throws never {
  baml.llm.parse<T>("GetUser", json) : user.MyClass
}
class user.MyClass$stream {
  name: null | string
  age: null | int
}
