baml_language/crates/baml_tests/snapshots/generator/baml_tests__generator__05_diagnostics2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected baml.llm.Client, got null
    ╭─[ valid_generator.baml:20:30 ]
    │
 20 │ ╭─▶ function GetUser() -> MyClass {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── type mismatch: expected baml.llm.Client, got null
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected user.MyClass, got unknown
    ╭─[ valid_generator.baml:20:30 ]
    │
 20 │ ╭─▶ function GetUser() -> MyClass {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── type mismatch: expected user.MyClass, got unknown
    │     
    │     Note: Error code: E0001
────╯

  [parse] Error: Expected Only 'client' and 'prompt' allowed in LLM function, found '<', found '<'
    ╭─[ valid_generator.baml:21:11 ]
    │
 21 │     client<llm> MyClient
    │           ┬  
    │           ╰── Expected Only 'client' and 'prompt' allowed in LLM function, found '<', found '<'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected client name, found '<'
    ╭─[ valid_generator.baml:21:11 ]
    │
 21 │     client<llm> MyClient
    │           ┬  
    │           ╰── Expected client name, found '<'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'llm', found identifier
    ╭─[ valid_generator.baml:21:12 ]
    │
 21 │     client<llm> MyClient
    │            ─┬─  
    │             ╰─── Expected Only 'client' and 'prompt' allowed in LLM function, found 'llm', found identifier
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected Only 'client' and 'prompt' allowed in LLM function, found '>', found '>'
    ╭─[ valid_generator.baml:21:15 ]
    │
 21 │     client<llm> MyClient
    │               ┬  
    │               ╰── Expected Only 'client' and 'prompt' allowed in LLM function, found '>', found '>'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'MyClient', found identifier
    ╭─[ valid_generator.baml:21:17 ]
    │
 21 │     client<llm> MyClient
    │                 ────┬───  
    │                     ╰───── Expected Only 'client' and 'prompt' allowed in LLM function, found 'MyClient', found identifier
    │ 
    │ Note: Error code: E0010
────╯
