baml_language/crates/baml_tests/snapshots/generator/baml_tests__generator__06_codegen.snap
---
source: target/debug/build/baml_tests-3725db7da166203a/out/generated_tests.rs
expression: output
---
=== BYTECODE ===
Functions: 1
Objects: 39
Globals: 35

Function GetUser (arity: 0, kind: External(Llm(RenderPrompt))):
  (no bytecode)
