baml_language/crates/baml_tests/snapshots/generator/baml_tests__generator__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.GetUser() -> user.MyClass {
    load_const null
    load_const "GetUser"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.GetUser$build_request() -> baml.http.Request {
    load_const "GetUser"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.GetUser$render_prompt() -> baml.llm.PromptAst {
    load_const "GetUser"
    alloc_map 0
    call baml.llm.render_prompt
    return
}
